P2/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: busybox:latest
        args:
        - /bin/sh
        - -c
        - "while true; do echo -e 'HTTP/1.1 200 OK\n\nHello from Busybox!' | nc -l -p 8080; done"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app3
spec:
  selector:
    app: app3
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
